fix height for shapeshift tx info

--- a/src/renderer/scss/component/_shapeshift.scss
+++ b/src/renderer/scss/component/_shapeshift.scss
@@ -13,7 +13,7 @@
 }
 
 .shapeshift__tx-info {
-  min-height: 55px;
+  min-height: 63px;
 }
 
 .shapeshift__deposit-address-wrapper {
